# dev-workflows-and-practices

./: LICENSE  README.md
fastapi-service-template/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
fastapi-service-template/.github/workflows/: ci.yml
fastapi-service-template/app/: main.py
fastapi-service-template/app/api/: __init__.py  routes.py
fastapi-service-template/app/core/: README.md  config.py  logging.py  request_context.py
fastapi-service-template/app/docs/: README.md  openapi.py
fastapi-service-template/app/observability/: README.md  metrics.py  middleware.py
fastapi-service-template/app/schemas/: customer.py  order.py
fastapi-service-template/helm/fastapi-app/: Chart.yaml  values.yaml
fastapi-service-template/helm/fastapi-app/dashboards/: README.md  fastapi-overview.json
fastapi-service-template/helm/fastapi-app/templates/: dashboards.yaml  deployment.yaml  service.yaml
fastapi-service-template/tests/: test_api_entities.py
tdd-conventions/: CONVENTIONS-AI.md  README.md  TDD-instruction.md  example_test_module.py  github-actions.tests.example.yml  gitlab-ci.tests.example.yml  tests-README.md
workflow-logging/: README.md
workflow-logging/templates/: month-stream.txt  project.txt
